# chemify

./: .gitignore  README.md  alembic.ini  pyproject.toml  tech_assessment.db
alembic/: env.py
alembic/versions/: d162e8c6ae99_initial_migration.py
tech_assessment/: crud.py  db.py  main.py  models.py  schemas.py
